--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="see_all">See All</string>
     <string name="men_products">Men Products</string>
     <string name="btnSignup">Sign Up</string>
+    <string name="rahul">Rahul</string>
 
 </resources>
